--- a/kitx_glide/build.gradle
+++ b/kitx_glide/build.gradle
@@ -1,27 +1,13 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-android {
-    compileSdkVersion 29
+apply from: "../build.lib.gradle"
 
-
-    defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles 'consumer-rules.pro'
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
+apply plugin: 'com.novoda.bintray-release'
+publish {
+    userOrg = 'ymex'
+    groupId = 'cn.ymex.kitx'
+    artifactId = 'kitx-glide-imageview'
+    publishVersion = "1.0.0"
+    desc = 'A simplifies and accelerates Android developer tools and widget.'
+    website = 'https://github.com/ymex/kitx/tree/master/kitx_glide'
 }
 
 dependencies {
@@ -30,7 +16,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
 
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    api 'com.github.bumptech.glide:glide:4.11.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
