--- a/kitx_widget/build.gradle
+++ b/kitx_widget/build.gradle
@@ -1,27 +1,13 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-android {
-    compileSdkVersion 29
+apply from: "../build.lib.gradle"
 
-
-    defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles 'consumer-rules.pro'
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
+apply plugin: 'com.novoda.bintray-release'
+publish {
+    userOrg = 'ymex'
+    groupId = 'cn.ymex.kitx'
+    artifactId = 'kitx-widget'
+    publishVersion = "1.0.0"
+    desc = 'A simplifies and accelerates Android developer tools and widget.'
+    website = 'https://github.com/ymex/kitx/tree/master/kitx_widget'
 }
 
 dependencies {
