--- a/kitx_glide/build.gradle
+++ b/kitx_glide/build.gradle
@@ -4,10 +4,18 @@ apply plugin: 'com.novoda.bintray-release'
 publish {
     userOrg = 'ymex'
     groupId = 'cn.ymex.kitx'
-    artifactId = 'kitx-glide-imageview'
+    artifactId = 'widget-glide'
     publishVersion = "1.0.0"
     desc = 'A simplifies and accelerates Android developer tools and widget.'
     website = 'https://github.com/ymex/kitx/tree/master/kitx_glide'
+}
+
+android {
+    defaultConfig {
+        //renderscript 兼容配置;
+        renderscriptTargetApi 14
+        renderscriptSupportModeEnabled  true
+    }
 }
 
 dependencies {
