--- a/kitx_widget/build.gradle
+++ b/kitx_widget/build.gradle
@@ -1,14 +1,14 @@
 apply from: "../build.lib.gradle"
 
-apply plugin: 'com.novoda.bintray-release'
-publish {
-    userOrg = 'ymex'
-    groupId = 'cn.ymex.kitx'
-    artifactId = 'kitx-widget'
-    publishVersion = "1.0.0"
-    desc = 'A simplifies and accelerates Android developer tools and widget.'
-    website = 'https://github.com/ymex/kitx/tree/master/kitx_widget'
-}
+//apply plugin: 'com.novoda.bintray-release'
+//publish {
+//    userOrg = 'ymex'
+//    groupId = 'cn.ymex.kitx'
+//    artifactId = 'widget'
+//    publishVersion = "1.0.0"
+//    desc = 'A simplifies and accelerates Android developer tools and widget.'
+//    website = 'https://github.com/ymex/kitx/tree/master/kitx_widget'
+//}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
