--- a/kitx_webview/build.gradle
+++ b/kitx_webview/build.gradle
@@ -1,31 +1,23 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply from: "../build.lib.gradle"
+
 android {
-    compileSdkVersion 29
-
-
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles 'consumer-rules.pro'
         ndk {
             abiFilters "armeabi", "armeabi-v7a", "x86", "mips"
         }
     }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
 }
+
+apply plugin: 'com.novoda.bintray-release'
+publish {
+    userOrg = 'ymex'
+    groupId = 'cn.ymex.kitx'
+    artifactId = 'widget-webview'
+    publishVersion = "1.0.0"
+    desc = 'webview for android'
+    website = 'https://github.com/ymex/kitx/tree/master/kitx_webview'
+}
+
 
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
