--- a/kitx_anhttp/build.gradle
+++ b/kitx_anhttp/build.gradle
@@ -1,12 +1,5 @@
 apply from: "../build.lib.gradle"
 
-android {
-    defaultConfig {
-        ndk {
-            abiFilters "armeabi", "armeabi-v7a", "x86", "mips"
-        }
-    }
-}
 
 //apply plugin: 'com.novoda.bintray-release'
 //publish {
@@ -18,12 +11,17 @@ android {
 //    website = 'https://github.com/ymex/kitx/tree/master/kitx_webview'
 //}
 
-
 dependencies {
-    api fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
+
+
+    implementation "com.squareup.okhttp3:okhttp:4.2.2"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.2.2"
+
+    implementation "com.squareup.retrofit2:retrofit:2.7.2"
+    implementation "com.squareup.retrofit2:converter-gson:2.7.2"
+    implementation "com.squareup.retrofit2:converter-scalars:2.7.2"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
