--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name="cn.ymex.kitx.sample.adapter.AdapterActivity" />
         <activity android:name=".permission.PermissionActivity" />
         <activity android:name=".webview.BridgeActivity" />
+        <activity android:name=".anhttp.AnhttpActivity" />
 
         <service
             android:name=".core.MutService"
