--- a/kitx_anhttp/build.gradle
+++ b/kitx_anhttp/build.gradle
@@ -1,27 +1,27 @@
-apply from: "../build.lib.gradle"
+apply from: "../build.lib_kt.gradle"
 
 
-//apply plugin: 'com.novoda.bintray-release'
-//publish {
-//    userOrg = 'ymex'
-//    groupId = 'cn.ymex.kitx'
-//    artifactId = 'widget-webview'
-//    publishVersion = "1.0.0"
-//    desc = 'webview for android'
-//    website = 'https://github.com/ymex/kitx/tree/master/kitx_webview'
-//}
+apply plugin: 'com.novoda.bintray-release'
+publish {
+    userOrg = 'ymex'
+    groupId = 'cn.ymex.kitx'
+    artifactId = 'anhttp'
+    publishVersion = "1.0.0"
+    desc = 'http for android base retrofit and okhttp!'
+    website = 'https://github.com/ymex/kitx/tree/master/kitx_anhttp'
+}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
 
 
-    implementation "com.squareup.okhttp3:okhttp:4.2.2"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.2.2"
+    api "com.squareup.okhttp3:okhttp:4.4.0"
+    api "com.squareup.okhttp3:logging-interceptor:4.4.0"
 
-    implementation "com.squareup.retrofit2:retrofit:2.7.2"
-    implementation "com.squareup.retrofit2:converter-gson:2.7.2"
-    implementation "com.squareup.retrofit2:converter-scalars:2.7.2"
+    api "com.squareup.retrofit2:retrofit:2.7.2"
+    api "com.squareup.retrofit2:converter-gson:2.7.2"
+    api "com.squareup.retrofit2:converter-scalars:2.7.2"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
