--- a/kitx_anhttp/build.gradle
+++ b/kitx_anhttp/build.gradle
@@ -12,10 +12,8 @@ apply from: "../build.lib_kt.gradle"
 //}
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-
-
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     api "com.squareup.okhttp3:okhttp:4.4.0"
     api "com.squareup.okhttp3:logging-interceptor:4.4.0"
     api "com.squareup.retrofit2:retrofit:2.7.2"
@@ -25,4 +23,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+
 }
