--- a/build.lib.gradle
+++ b/build.lib.gradle
@@ -26,3 +26,16 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
+
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
+
+task androidJavadocs(type: Javadoc) {
+    allprojects {
+        tasks.withType(Javadoc) {
+            options.encoding = "UTF-8"
+        }
+    }
+}
