--- a/kitx_anhttp/build.gradle
+++ b/kitx_anhttp/build.gradle
@@ -12,17 +12,20 @@ apply from: "../build.lib_kt.gradle"
 //}
 
 dependencies {
+    def retrofit2_version = "2.7.2"
+    def okhttp3_version = "4.4.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
-    api "com.squareup.okhttp3:okhttp:4.4.0"
-    api "com.squareup.okhttp3:logging-interceptor:4.4.0"
-    api "com.squareup.retrofit2:retrofit:2.7.2"
-    api "com.squareup.retrofit2:converter-gson:2.7.2"
-    api "com.squareup.retrofit2:converter-scalars:2.7.2"
+    api "com.squareup.okhttp3:okhttp:$okhttp3_version"
+    api "com.squareup.okhttp3:logging-interceptor:$okhttp3_version"
+    api "com.squareup.retrofit2:retrofit:$retrofit2_version"
+    api "com.squareup.retrofit2:converter-gson:$retrofit2_version"
+    api "com.squareup.retrofit2:converter-scalars:$retrofit2_version"
+}
 
+dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
-
 }
