--- a/kitx_core/build.gradle
+++ b/kitx_core/build.gradle
@@ -13,6 +13,7 @@ apply from: "../build.lib.gradle"
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
     testImplementation 'junit:junit:4.12'
