--- a/kitx_webview/build.gradle
+++ b/kitx_webview/build.gradle
@@ -20,8 +20,8 @@ publish {
 
 
 dependencies {
-    api "com.tencent.tbs.tbssdk:sdk:43697"
-
+    api fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "androidx.annotation:annotation:1.1.0"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
