--- a/kitx_core/build.gradle
+++ b/kitx_core/build.gradle
@@ -2,10 +2,10 @@ apply from: "../build.lib.gradle"
 
 //apply plugin: 'com.novoda.bintray-release'
 //publish {
-//    userOrg = 'ymex'
+//    userOrg = 'ymexcn'
 //    groupId = 'cn.ymex.kitx'
-//    artifactId = 'core'
-//    publishVersion = "1.0.1"
+//    artifactId = 'kitx-core'
+//    publishVersion = "1.0.0"
 //    desc = 'A simplifies and accelerates Android developer tools and widget.'
 //    website = 'https://github.com/ymex/kitx/tree/master/kitx_core'
 //}
