--- a/kitx_anhttp/build.gradle
+++ b/kitx_anhttp/build.gradle
@@ -3,10 +3,10 @@ apply from: "../build.lib_kt.gradle"
 
 //apply plugin: 'com.novoda.bintray-release'
 //publish {
-//    userOrg = 'ymex'
+//    userOrg = 'ymexcn'
 //    groupId = 'cn.ymex.kitx'
-//    artifactId = 'anhttp'
-//    publishVersion = "1.2.0"
+//    artifactId = 'kitx-anhttp'
+//    publishVersion = "1.0.0"
 //    desc = 'http for android base retrofit and okhttp!'
 //    website = 'https://github.com/ymex/kitx/tree/master/kitx_anhttp'
 //}
