--- a/kitx_utils/build.gradle
+++ b/kitx_utils/build.gradle
@@ -2,9 +2,9 @@ apply from: "../build.lib_kt.gradle"
 
 //apply plugin: 'com.novoda.bintray-release'
 //publish {
-//    userOrg = 'ymex'
+//    userOrg = 'ymexcn'
 //    groupId = 'cn.ymex.kitx'
-//    artifactId = 'utils-ktx'
+//    artifactId = 'kitx-utils-ktx'
 //    publishVersion = "1.0.0"
 //    desc = 'A simplifies and accelerates Android developer tools and widget.'
 //    website = 'https://github.com/ymex/kitx/tree/master/kitx_utils'
