--- a/kitx_widget/build.gradle
+++ b/kitx_widget/build.gradle
@@ -2,9 +2,9 @@ apply from: "../build.lib.gradle"
 
 //apply plugin: 'com.novoda.bintray-release'
 //publish {
-//    userOrg = 'ymex'
+//    userOrg = 'ymexcn'
 //    groupId = 'cn.ymex.kitx'
-//    artifactId = 'widget'
+//    artifactId = 'kitx-widget'
 //    publishVersion = "1.0.1"
 //    desc = 'A simplifies and accelerates Android developer tools and widget.'
 //    website = 'https://github.com/ymex/kitx/tree/master/kitx_widget'
