--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,36 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+ext {
+    kitx = [
+            anhttp : [
+                    version: "1.0.2",
+                    bintray: false
+            ],
+            core   : [
+                    version: "1.0.2",
+                    bintray: false
+            ],
+            glide  : [
+                    version: "1.0.0",
+                    bintray: false
+            ],
+            start  : [
+                    version: "0.0.1",
+                    bintray: false
+            ],
+            tips   : [
+                    version: "0.0.1",
+                    bintray: false
+            ],
+            webview: [
+                    version: "1.0.0",
+                    bintray: false
+            ],
+            widget : [
+                    version: "1.0.1",
+                    bintray: false
+            ]
+    ]
+}
 buildscript {
     ext.kotlin_version = '1.3.61'
     repositories {
