--- a/kitx_core/build.gradle
+++ b/kitx_core/build.gradle
@@ -1,15 +1,18 @@
 apply from: "../build.lib.gradle"
 
-//apply plugin: 'com.novoda.bintray-release'
-//publish {
-//    userOrg = 'ymexcn'
-//    groupId = 'cn.ymex.kitx'
-//    artifactId = 'kitx-core'
-//    publishVersion = "1.0.2"
-//    desc = 'A simplifies and accelerates Android developer tools and widget.'
-//    website = 'https://github.com/ymex/kitx/tree/master/kitx_core'
-//}
+def core = rootProject.ext.kitx.core
 
+if (core.bintray) {
+    apply plugin: 'com.novoda.bintray-release'
+    publish {
+        userOrg = 'ymexcn'
+        groupId = 'cn.ymex.kitx'
+        artifactId = 'kitx-core'
+        publishVersion = "${core.version}"
+        desc = 'A simplifies and accelerates Android developer tools and widget.'
+        website = 'https://github.com/ymex/kitx/tree/master/kitx_core'
+    }
+}
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
