--- a/kitx_start/build.gradle
+++ b/kitx_start/build.gradle
@@ -1,15 +1,18 @@
 apply from: "../build.lib.gradle"
 
-apply plugin: 'com.novoda.bintray-release'
-publish {
-    userOrg = 'ymexcn'
-    groupId = 'cn.ymex.kitx'
-    artifactId = 'kitx-app-start'
-    publishVersion = "0.0.1"
-    desc = 'A simplifies and accelerates Android developer tools and widget.'
-    website = 'https://github.com/ymex/kitx/tree/master/kitx_start'
-}
+def start = rootProject.ext.kitx.start
 
+if (start.bintray) {
+    apply plugin: 'com.novoda.bintray-release'
+    publish {
+        userOrg = 'ymexcn'
+        groupId = 'cn.ymex.kitx'
+        artifactId = 'kitx-app-start'
+        publishVersion = "${start.version}"
+        desc = 'A simplifies and accelerates Android developer tools and widget.'
+        website = 'https://github.com/ymex/kitx/tree/master/kitx_start'
+    }
+}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
