--- a/kitx_start/build.gradle
+++ b/kitx_start/build.gradle
@@ -20,13 +20,15 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
 
-    api 'cn.ymex.kitx:kitx-core:1.0.2'
-    api 'cn.ymex.kitx:kitx-utils-ktx:1.0.2'
-    api 'cn.ymex.kitx:kitx-anhttp:1.0.2'
-    api 'cn.ymex.kitx:kitx-widget:1.0.1'
-    api 'cn.ymex.kitx:kitx-widget-glide:1.0.0'
-    api 'cn.ymex.kitx:kitx-widget-webview:1.0.0'
-    api 'org.greenrobot:eventbus:3.2.0'
+    def apps = rootProject.ext.start
+
+    api "cn.ymex.kitx:kitx-anhttp:${apps.anhttp}"
+    api "cn.ymex.kitx:kitx-core:${apps.core}"
+    api "cn.ymex.kitx:kitx-widget-glide:${apps.glide}"
+    api "cn.ymex.kitx:kitx-tips:${apps.tips}"
+    api "cn.ymex.kitx:kitx-widget:${apps.widget}"
+    api "cn.ymex.kitx:kitx-widget-webview:${apps.webview}"
+    api "org.greenrobot:eventbus:3.2.0"
 
 
     testImplementation 'junit:junit:4.12'
