--- a/kitx_start/build.gradle
+++ b/kitx_start/build.gradle
@@ -20,7 +20,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
 
-    def apps = rootProject.ext.start
+    def apps = rootProject.ext.kitx
 
 
     if (start.bintray) {
