--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@
 ext {
     kitx = [
             anhttp : [
-                    version: "1.0.3",
-                    bintray: false
+                    version: "1.0.4",
+                    bintray: true
             ],
             core   : [
                     version: "1.0.4",
@@ -32,16 +32,17 @@ ext {
     ]
 }
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    ext.kotlin_version = '1.4.21'
     repositories {
         google()
         jcenter()
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:4.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.novoda:bintray-release:0.9.1'
+//        classpath 'com.novoda:bintray-release:0.9.2'
+        classpath 'com.github.panpf.bintray-publish:bintray-publish:1.0.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
