--- a/kitx_start/build.gradle
+++ b/kitx_start/build.gradle
@@ -17,8 +17,10 @@ if (start.bintray) {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
+    implementation 'androidx.core:core-ktx:1.3.2'
 
     def apps = rootProject.ext.kitx
 
@@ -42,7 +44,7 @@ dependencies {
     api "org.greenrobot:eventbus:3.2.0"
 
 
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation 'junit:junit:4.13.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
