--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".permission.PermissionActivity" />
         <activity android:name=".webview.BridgeActivity" />
         <activity android:name=".anhttp.AnhttpStartActivity" />
+        <activity android:name=".updater.UpdaterActivity" />
 
         <service
             android:name=".core.MutService"
@@ -44,6 +45,8 @@
                 <action android:name="android.service.notification.NotificationListenerService" />
             </intent-filter>
         </service>
+
+
     </application>
 
 </manifest>
