--- a/kitx_start/src/main/AndroidManifest.xml
+++ b/kitx_start/src/main/AndroidManifest.xml
@@ -1,2 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cn.ymex.kitx.start" />
+    package="cn.ymex.kitx.start" >
+    <application>
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.KitxFilesProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/kitx_files_provider" />
+        </provider>
+    </application>
+</manifest>
