--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,10 @@
-include ':app', ':kitx_core', ':kitx_widget', ':kitx_glide',':kitx_webview', ':kitx_anhttp'
-rootProject.name='ymex.kitx'
+include ':app'
+include ':kitx_core'
+include ':kitx_widget'
+include ':kitx_glide'
+include ':kitx_webview'
+include ':kitx_anhttp'
 include ':kitx_start'
 include ':kitx_tips'
+include ':kitx_tps_umeng'
+rootProject.name='ymex.kitx'
