--- a/kitx_tps_umeng/src/main/AndroidManifest.xml
+++ b/kitx_tps_umeng/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
     <!-- 以下为需要的基本权限，需要自行添加至您的AndroidManifest文件中 end-->
 
     <application>
+        <activity
+            android:name="cn.ymex.tps.umeng.PushHoldActivity"
+            android:launchMode="singleTask"
+            android:exported="true"/>
         <!-- 以下为基本配置信息，需要自行添加至您的AndroidManifest文件中 start-->
         <service
             android:name="com.taobao.accs.ChannelService"
@@ -166,7 +170,7 @@
 
         <!-- 魅族 start-->
         <!--push应用定义消息receiver声明 -->
-        <receiver android:name=".MeizuMessageReceiver">
+        <receiver android:name="cn.ymex.tps.umeng.MeizuMessageReceiver">
             <intent-filter>
                 <!-- 接收push消息 -->
                 <action android:name="com.meizu.flyme.push.intent.MESSAGE" />
@@ -182,16 +186,15 @@
         </receiver>
         <!-- 魅族 end-->
 
-        <!-- VIVO厂商通道 start-->
+        <!-- VIVO厂商通道-->
         <meta-data
             android:name="com.vivo.push.api_key"
             android:value="此处改为VIVO后台真实参数" />
         <meta-data
             android:name="com.vivo.push.app_id"
             android:value="此处改为VIVO后台真实参数" />
-        <!-- VIVO厂商通道 end-->
 
-        <!-- HUAWEI厂商通道 start-->
+        <!-- HUAWEI厂商通道 -->
         <meta-data
             android:name="com.huawei.hms.client.appid"
             android:value="此处改为huawei后台真实参数" />
