--- a/kitx_tps_umeng/src/main/AndroidManifest.xml
+++ b/kitx_tps_umeng/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
 
     <application>
         <activity
-            android:name="cn.ymex.tps.umeng.PushHoldActivity"
+            android:name="cn.ymex.kitx.tps.umeng.PushHoldActivity"
             android:launchMode="singleTask"
             android:exported="true"/>
         <!-- 以下为基本配置信息，需要自行添加至您的AndroidManifest文件中 start-->
@@ -170,7 +170,7 @@
 
         <!-- 魅族 start-->
         <!--push应用定义消息receiver声明 -->
-        <receiver android:name="cn.ymex.tps.umeng.MeizuMessageReceiver">
+        <receiver android:name="cn.ymex.kitx.tps.umeng.MeizuMessageReceiver">
             <intent-filter>
                 <!-- 接收push消息 -->
                 <action android:name="com.meizu.flyme.push.intent.MESSAGE" />
