--- a/kitx_start/build.gradle
+++ b/kitx_start/build.gradle
@@ -15,6 +15,12 @@ if (start.bintray) {
     }
 }
 
+android {
+    buildFeatures {
+        viewBinding = true
+    }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
