--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ ext {
                     bintray: false
             ],
             tips   : [
-                    version: "0.0.5",
+                    version: "0.0.5",//unupdate
                     bintray: false
             ],
             webview: [
@@ -22,7 +22,7 @@ ext {
                     bintray: false
             ],
             widget : [
-                    version: "1.0.2",
+                    version: "1.0.2",//unupdate
                     bintray: false
             ],
             umeng :[
@@ -30,20 +30,20 @@ ext {
                     bintray: false
             ],
             start  : [
-                    version: "0.1.0",
+                    version: "0.1.0",//unupdate
                     bintray: false
             ]
     ]
 }
 buildscript {
-    ext.kotlin_version = '1.4.31'
+    ext.kotlin_version = '1.4.32'
     repositories {
         google()
         jcenter()
         maven { url 'https://dl.bintray.com/umsdk/release' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.1'
+        classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 //        classpath 'com.novoda:bintray-release:0.9.2'
         classpath 'com.github.panpf.bintray-publish:bintray-publish:1.0.0'
