--- a/kitx_tips/build.gradle
+++ b/kitx_tips/build.gradle
@@ -3,7 +3,8 @@ apply from: "../build.lib_kt.gradle"
 def tips = rootProject.ext.kitx.tips
 
 if (tips.bintray) {
-    apply plugin: 'com.novoda.bintray-release'
+    //apply plugin: 'com.novoda.bintray-release'
+    apply plugin: 'com.github.panpf.bintray-publish'
     publish {
         userOrg = 'ymexcn'
         groupId = 'cn.ymex.kitx'
