--- a/kitx_widget/build.gradle
+++ b/kitx_widget/build.gradle
@@ -3,7 +3,8 @@ apply from: "../build.lib.gradle"
 def widget = rootProject.ext.kitx.widget
 
 if (widget.bintray) {
-    apply plugin: 'com.novoda.bintray-release'
+//    apply plugin: 'com.novoda.bintray-release'
+    apply plugin: 'com.github.panpf.bintray-publish'
     publish {
         userOrg = 'ymexcn'
         groupId = 'cn.ymex.kitx'
