--- a/kitx_tps_umeng/build.gradle
+++ b/kitx_tps_umeng/build.gradle
@@ -17,28 +17,30 @@ if (umeng.bintray) {
 
 
 dependencies {
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
     //基础组件库依赖(必须) Push 6.2.0版本必须升级新版本Common SDK
-    implementation 'com.umeng.umsdk:common:9.3.0'
-    implementation  'com.umeng.umsdk:asms:1.1.3'
-    implementation 'com.umeng.umsdk:utdid:1.5.2'
+    api 'com.umeng.umsdk:common:9.3.7'
+    implementation  'com.umeng.umsdk:asms:1.2.1'
+    implementation 'com.umeng.umsdk:utdid:1.5.2.1'
     implementation 'com.umeng.umsdk:crash:0.0.4'
 
     //友盟push相关依赖(必须)
-    implementation 'com.umeng.umsdk:push:6.2.0'
+    api 'com.umeng.umsdk:push:6.3.2'
 
-    implementation 'com.umeng.umsdk:alicloud-httpdns:1.2.5'
-    implementation 'com.umeng.umsdk:alicloud-utils:1.1.5'
-    implementation 'com.umeng.umsdk:alicloud_beacon:1.0.1'
+    implementation 'com.umeng.umsdk:alicloud-httpdns:1.3.2.3'
+    implementation 'com.umeng.umsdk:alicloud-utils:2.0.0'
+    implementation 'com.umeng.umsdk:alicloud_beacon:1.0.5'
 
-    implementation 'com.umeng.umsdk:agoo-accs:3.3.9.7-open'
-    implementation 'com.umeng.umsdk:agoo_networksdk:3.5.5'
-    implementation 'com.umeng.umsdk:agoo_tlog:3.0.0.17'
-    implementation 'com.umeng.umsdk:agoo_tnet4android:3.1.14.9'
+    api 'com.umeng.umsdk:agoo-accs:3.4.2.7'
+    implementation 'com.umeng.umsdk:agoo_aranger:1.0.6'
+    implementation 'com.umeng.umsdk:agoo_networksdk:3.5.8'
+    implementation 'com.umeng.umsdk:agoo_tnet4android:3.1.14.10'
+
 
     //厂商推送依赖-华为
     implementation 'com.umeng.umsdk:huawei-basetb:2.6.3.306'
@@ -54,6 +56,6 @@ dependencies {
     implementation 'com.umeng.umsdk:vivo-push:2.3.5'
     implementation 'com.umeng.umsdk:vivo-umengaccs:1.1.0'
     //厂商推送依赖-小米
-    implementation 'com.umeng.umsdk:xiaomi-push:3.7.0'
-    implementation 'com.umeng.umsdk:xiaomi-umengaccs:1.1.4'
+    implementation 'com.umeng.umsdk:xiaomi-push:3.8.5'
+    implementation 'com.umeng.umsdk:xiaomi-umengaccs:1.2.1'
 }
