--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,18 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    def sign =  {
+        keyAlias 'kitx'
+        keyPassword 'ymex.cn'
+        storePassword 'ymex.cn'
+        storeFile file('../kitx.jks')
+    }
+
+    signingConfigs{
+        debug sign
+        release sign
+    }
 }
 
 dependencies {
