--- a/kitx_tps_umeng/build.gradle
+++ b/kitx_tps_umeng/build.gradle
@@ -23,15 +23,13 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
-    //基础组件库依赖(必须) Push 6.2.0版本必须升级新版本Common SDK
+    //友盟基础库相关依赖（必须）
     api 'com.umeng.umsdk:common:9.3.7'
-    implementation  'com.umeng.umsdk:asms:1.2.1'
+    implementation 'com.umeng.umsdk:asms:1.2.1'
     implementation 'com.umeng.umsdk:utdid:1.5.2.1'
-    implementation 'com.umeng.umsdk:crash:0.0.4'
 
-    //友盟push相关依赖(必须)
-    api 'com.umeng.umsdk:push:6.3.2'
-
+    //友盟Push相关依赖（必须）
+    api 'com.umeng.umsdk:push:6.3.3'
     implementation 'com.umeng.umsdk:alicloud-httpdns:1.3.2.3'
     implementation 'com.umeng.umsdk:alicloud-utils:2.0.0'
     implementation 'com.umeng.umsdk:alicloud_beacon:1.0.5'
@@ -41,21 +39,30 @@ dependencies {
     implementation 'com.umeng.umsdk:agoo_networksdk:3.5.8'
     implementation 'com.umeng.umsdk:agoo_tnet4android:3.1.14.10'
 
+    //集成U-APM（可选）
+    implementation 'com.umeng.umsdk:apm:1.1.1'
 
-    //厂商推送依赖-华为
-    implementation 'com.umeng.umsdk:huawei-basetb:2.6.3.306'
-    implementation 'com.umeng.umsdk:huawei-pushtb:2.6.3.306'
-    implementation 'com.umeng.umsdk:huawei-umengaccs:1.2.4'
-    //厂商推送依赖-魅族
-    implementation 'com.umeng.umsdk:meizu-push:3.8.7'
-    implementation 'com.umeng.umsdk:meizu-umengaccs:1.1.1'
-    //厂商推送依赖-OPPO
-    implementation 'com.umeng.umsdk:oppo-push:2.0.2'
-    implementation 'com.umeng.umsdk:oppo-umengaccs:1.0.6'
-    //厂商推送依赖-VIVO
-    implementation 'com.umeng.umsdk:vivo-push:2.3.5'
-    implementation 'com.umeng.umsdk:vivo-umengaccs:1.1.0'
+
+
+
     //厂商推送依赖-小米
     implementation 'com.umeng.umsdk:xiaomi-push:3.8.5'
     implementation 'com.umeng.umsdk:xiaomi-umengaccs:1.2.1'
+
+    //厂商推送依赖-华为
+    implementation 'com.huawei.hms:push:5.0.4.302'
+    implementation 'com.umeng.umsdk:huawei-umengaccs:1.3.1'
+
+    //厂商推送依赖-魅族
+    implementation 'com.umeng.umsdk:meizu-push:4.0.2'
+    implementation 'com.umeng.umsdk:meizu-umengaccs:1.1.3'
+
+    //厂商推送依赖-OPPO
+    implementation 'com.umeng.umsdk:oppo-push:2.1.0'
+    implementation 'com.umeng.umsdk:oppo-umengaccs:1.0.7-fix'
+
+    //厂商推送依赖-VIVO
+    implementation 'com.umeng.umsdk:vivo-push:2.9.0'
+    implementation 'com.umeng.umsdk:vivo-umengaccs:1.1.2'
+
 }
