--- a/kitx_tps_umeng/build.gradle
+++ b/kitx_tps_umeng/build.gradle
@@ -1,5 +1,5 @@
 apply from: "../build.lib_kt.gradle"
-
+apply plugin: "maven-publish"
 def umeng = rootProject.ext.kitx.umeng
 
 if (umeng.bintray) {
@@ -15,6 +15,31 @@ if (umeng.bintray) {
     }
 }
 
+afterEvaluate {
+    publishing {
+        publications {
+            // Creates a Maven publication called "release".
+            release(MavenPublication) {
+                // Applies the component for the release build variant.
+                from components.release
+
+                // You can then customize attributes of the publication as shown below.
+                groupId = 'cn.ymex.kitx'
+                artifactId = 'kitx-tps-umeng'
+                version = "${umeng.version}"
+            }
+            // Creates a Maven publication called “debug”.
+            debug(MavenPublication) {
+                // Applies the component for the debug build variant.
+                from components.debug
+
+                groupId = 'cn.ymex.kitx'
+                artifactId = 'kitx-tps-umeng'
+                version = "${umeng.version}"
+            }
+        }
+    }
+}
 
 dependencies {
 
