--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ ext {
             ],
             umeng :[
                     version: "0.0.3_9.3.7",//un
-                    bintray: false
+                    bintray: true
             ],
             start  : [
                     version: "0.1.1",//un
@@ -47,6 +47,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 //        classpath 'com.novoda:bintray-release:0.9.2'
         classpath 'com.github.panpf.bintray-publish:bintray-publish:1.0.0'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
