--- a/kitx_tps_umeng/build.gradle
+++ b/kitx_tps_umeng/build.gradle
@@ -1,45 +1,25 @@
 apply from: "../build.lib_kt.gradle"
-apply plugin: "maven-publish"
+
 def umeng = rootProject.ext.kitx.umeng
 
 if (umeng.bintray) {
+    apply plugin: 'com.github.dcendents.android-maven'  //添加这两行
+    group='com.github.ymex'  //GitHub昵称
+    version = "0.0.3"
+
 //    apply plugin: 'com.novoda.bintray-release'
-    apply plugin: 'com.github.panpf.bintray-publish'
-    publish {
-        userOrg = 'ymexcn'
-        groupId = 'cn.ymex.kitx'
-        artifactId = 'kitx-tps-umeng'
-        publishVersion = "${umeng.version}"
-        desc = 'A simplifies and accelerates Android developer tools and widget.'
-        website = 'https://github.com/ymex/kitx/tree/master/kitx_tps_umeng'
-    }
+//    apply plugin: 'com.github.panpf.bintray-publish'
+//    publish {
+//        userOrg = 'ymexcn'
+//        groupId = 'cn.ymex.kitx'
+//        artifactId = 'kitx-tps-umeng'
+//        publishVersion = "${umeng.version}"
+//        desc = 'A simplifies and accelerates Android developer tools and widget.'
+//        website = 'https://github.com/ymex/kitx/tree/master/kitx_tps_umeng'
+//    }
 }
 
-afterEvaluate {
-    publishing {
-        publications {
-            // Creates a Maven publication called "release".
-            release(MavenPublication) {
-                // Applies the component for the release build variant.
-                from components.release
 
-                // You can then customize attributes of the publication as shown below.
-                groupId = 'cn.ymex.kitx'
-                artifactId = 'kitx-tps-umeng'
-                version = "${umeng.version}"
-            }
-            // Creates a Maven publication called “debug”.
-            debug(MavenPublication) {
-                // Applies the component for the debug build variant.
-                from components.debug
-
-                groupId = 'cn.ymex.kitx'
-                artifactId = 'kitx-tps-umeng'
-                version = "${umeng.version}"
-            }
-        }
-    }
-}
 
 dependencies {
 
