--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ buildscript {
         google()
         jcenter()
         maven { url 'https://dl.bintray.com/umsdk/release' }
+        maven { url 'https://developer.huawei.com/repo/'}
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
@@ -48,6 +49,7 @@ buildscript {
 //        classpath 'com.novoda:bintray-release:0.9.2'
         classpath 'com.github.panpf.bintray-publish:bintray-publish:1.0.0'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath 'com.huawei.agconnect:agcp:1.4.2.300'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -58,6 +60,7 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven { url 'https://developer.huawei.com/repo/'}
         maven { url 'https://dl.bintray.com/umsdk/release' }
     }
 
