--- a/kitx_tps_umeng/build.gradle
+++ b/kitx_tps_umeng/build.gradle
@@ -5,7 +5,7 @@ def umeng = rootProject.ext.kitx.umeng
 if (umeng.bintray) {
     apply plugin: 'com.github.dcendents.android-maven'
     group='com.github.ymex'
-    version = "${umeng.version}"
+    version = "${umeng.name}-v${umeng.version}"
 }
 
 
