--- a/kitx_tips/build.gradle
+++ b/kitx_tips/build.gradle
@@ -3,16 +3,9 @@ apply from: "../build.lib_kt.gradle"
 def tips = rootProject.ext.kitx.tips
 
 if (tips.bintray) {
-    //apply plugin: 'com.novoda.bintray-release'
-    apply plugin: 'com.github.panpf.bintray-publish'
-    publish {
-        userOrg = 'ymexcn'
-        groupId = 'cn.ymex.kitx'
-        artifactId = 'kitx-tips'
-        publishVersion = "${tips.version}"
-        desc = 'Android developer tips.'
-        website = 'https://github.com/ymex/kitx/tree/master/kitx_tips'
-    }
+    apply plugin: 'com.github.dcendents.android-maven'
+    group='com.github.ymex'
+    version = "${tips.name}-v${tips.version}"
 }
 
 dependencies {
